# fer

./: .gitattributes  .gitignore  TODO.md  advantage2.txt  check_mps_memory.py  compress_pdf.ipynb  draft copy.ipynb  draft.ipynb  draft.py  draft_login.py  e.ipynb  main.ipynb  pyproject.toml  pyvenv.cfg  temp.ipynb  tips.txt  todrop.py
NER/: README.md  bert_ner_basic.py  bert_ner_clustering_semantic.py  coreruler_ner.py  entity_descriptions.json  gliner_main.ipynb  main_example_ner_bert.py  main_llm_model.py  main_pegasus.py  main_spacy.py  main_wo_pegasus.py  name_entity_recognition.ipynb  named_entities_clustered_results.json  ner.ipynb  promp_text.py
TR_challenge/: README.md  TR_ds_challenge.ipynb  main.ipynb  main.py  main3.ipynb  main_official.py  notebook.ipynb  notebook2.ipynb  notebook_official.ipynb  strategies.md
Work/: AuthoritativeDataMapper.py  class DataProcessor:.py  confluence_ad.txt  dataframes_list = {.py  def convert_to_datetime(df, column, form.py  e2e  shopping_list = pd.py  (+7 more)
quantumBlack/spaceflight/: .gitignore  README.md  pyproject.toml  requirements.txt
quantumBlack/spaceflight/berserk/: README.md  pyproject.toml
quantumBlack/spaceflight/berserk/conf/: logging.yml
quantumBlack/spaceflight/berserk/docs/source/: conf.py  index.rst
quantumBlack/spaceflight/berserk/notebooks/: main.ipynb
quantumBlack/spaceflight/berserk/src/berserk/: __init__.py  __main__.py  settings.py
quantumBlack/spaceflight/berserk/tests/pipelines/data_science/: test_pipeline.py
quantumBlack/spaceflight/src/spaceflight/: __init__.py  __main__.py  settings.py
(+118 files in other folders)
